Add Specifications table to README with startup time and perf metrics